--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -251,7 +251,7 @@ text_composition_strategy legacy
 
 #: }}}
 
-#: Cursor customization {{{
+#: Cursor customizationdown {{{
 
 # cursor #cccccc
 
@@ -290,7 +290,7 @@ shell_integration no-cursor
 
 #: The thickness of the underline cursor (in pts).
 
-# cursor_blink_interval -1
+cursor_blink_interval -1
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
@@ -717,7 +717,7 @@ sync_to_monitor no
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -733,7 +733,7 @@ sync_to_monitor no
 #: selection background color. If you feel that the visual bell is too
 #: bright, you can set it to a darker color.
 
-# window_alert_on_bell yes
+window_alert_on_bell yes
 
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on linux.
@@ -1125,7 +1125,7 @@ foreground #abb2bf
 
 #: The foreground and background colors.
 
-background_opacity 0.80
+background_opacity 0.90
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
