--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -42,11 +42,11 @@ $fileManager = thunar
 $menu = wofi
 $browser = firefox
 
-windowrule=float,flameshot
-windowrule=noanim,flameshot
-windowrule=nodim,flameshot
-windowrule=noshadow,flameshot
-windowrule=noblur,flameshot
+windowrule=float,pavucontrol
+windowrule=size 30% 30%,pavucontrol
+windowrule=move cursor -60% 40,pavucontrol
+
+windowrule=stayfocused,steam
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
