--- a/wofi/config
+++ b/wofi/config
@@ -1,6 +1,8 @@
 show=drun
 width=25%
-height=50%
-location=top
-y=5
+height=25%
+key_expand=o
+insensitive=true
+location=center
 allow_images=true
+image_size=20
