--- a/waybar/config
+++ b/waybar/config
@@ -5,7 +5,7 @@
 	"spacing": 20,
     "modules-left": ["hyprland/workspaces", "hyprland/submap", "hyprland/window"],
 	"modules-center": ["mpris"],
-    "modules-right": ["tray", "pulseaudio", "battery", "clock", "network"],
+    "modules-right": ["tray", "pulseaudio", "battery", "backlight", "clock", "network"],
 	"hyprland/workspaces": {
 		
 	},
@@ -15,8 +15,8 @@
 	"mpris": {
 		"player": "spotify",
 		"interval": 1,
-		"format": "{player_icon} {dynamic}",
-		"format-paused": "{status_icon} {dynamic}",
+		"format": "{player_icon} {artist} - {title} - <small>[{position}/{length}]</small>",
+		"format-paused": "{status_icon} {artist} - {title} - <small>[{position}/{length}]</small>",
 		"player-icons": {
 			"default": "▶",
 			"mpv": "🎵",
@@ -40,6 +40,9 @@
         "format": "{capacity}% {icon}",
         "format-icons": ["", "", "", "", ""]
     },
+	"backlight": {
+		
+	},
     "clock": {
 		"interval": 1,
 		"format": "{:%Y-%m-%d %I:%M %p}",
