--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,13 +21,12 @@ exec-once = polkit-kde-agent
 exec-once = spotify-launcher
 exec-once = bash ~/.config/hypr/minimize.sh
 exec-once = discord --start-minimized
-exec-once = XDG_CURRENT_DESKTOP=sway flameshot
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Variables
-$terminal = kitty
+$terminal = alacritty
 $fileManager = thunar
 $menu = wofi
 $browser = firefox
@@ -39,10 +38,15 @@ windowrule=float,pavucontrol
 windowrule=size 30% 30%,pavucontrol
 windowrule=move cursor -60% 40,pavucontrol
 
+windowrule=float,Spotify
+windowrule=center,Spotify
+windowrule=minsize 60% 60%,Spotify
+
 # windowrule=stayfocused,steam # causes some issues
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = WLR_DRM_NO_ATOMIC,1 # tearing support
 
 input {
     kb_layout = us
@@ -152,6 +156,8 @@ bind = $mainMod, C, killactive,
 # bind = $mainMod, M, exit, 
 bind = $mainMod, M, exec, hyprctl dispatch exit  # calling exit is buggy for some reason
 bind = $mainMod, V, togglefloating, 
+bind = $mainMod, V, resizeactive, exact 70% 70%
+bind = $mainMod, V, centerwindow
 bind = $mainMod, F, fullscreen, 0
 
 bind = $mainMod, P, pseudo, # dwindle
@@ -168,6 +174,11 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, j, movewindow, d
 
 bind = $mainMod CONTROL, l, focusmonitor, r
 bind = $mainMod CONTROL, h, focusmonitor, l
