--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -30,6 +30,7 @@ $terminal = alacritty
 $fileManager = thunar
 $menu = wofi
 $browser = firefox
+$sysmenu = wlogout
 
 # Rules
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
@@ -37,6 +38,14 @@ windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 windowrule=float,pavucontrol
 windowrule=size 30% 30%,pavucontrol
 windowrule=move cursor -60% 40,pavucontrol
+
+windowrule=nomaximizerequest,wlogout
+windowrule=nofullscreenrequest,wlogout
+windowrule=float,wlogout
+windowrule=move 0% 0%,wlogout
+windowrule=size 100% 100%,wlogout
+windowrule=stayfocused,wlogout
+windowrule=animation slide,wlogout
 
 windowrule=float,Spotify
 windowrule=center,Spotify
@@ -143,6 +152,8 @@ misc {
 $mainMod = SUPER
 $print = page_up
 
+bind = $mainMod SHIFT, R, forcerendererreload
+
 # screenshot area
 bind = $mainMod, $print, exec, grimblast --freeze copysave area ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
 # screenshot area and open in swappy
@@ -168,6 +179,7 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, B, exec, $browser
+bind = $mainMod SHIFT, E, exec, $sysmenu
 
 # Move focus with mainMod + vim
 bind = $mainMod, h, movefocus, l
