custom special workspaces for apps

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,8 +19,9 @@ exec-once = polkit-kde-agent
 
 # Startup apps
 exec-once = spotify-launcher
-exec-once = bash ~/.config/hypr/minimize.sh
-exec-once = discord --start-minimized
+# exec-once = bash ~/.config/hypr/minimize.sh
+# exec-once = discord --start-minimized
+exec-once = discord
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -47,9 +48,13 @@ windowrule=size 100% 100%,wlogout
 windowrule=stayfocused,wlogout
 windowrule=animation slide,wlogout
 
-windowrule=float,Spotify
-windowrule=center,Spotify
-windowrule=minsize 60% 60%,Spotify
+# windowrule=float,Spotify
+# windowrule=center,Spotify
+# windowrule=minsize 60% 60%,Spotify
+
+# Special workspace apps
+windowrule=workspace special:spotify silent,Spotify
+windowrule=workspace special:discord silent,discord
 
 # windowrule=stayfocused,steam # causes some issues
 
@@ -223,8 +228,38 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+
+# Special app workspaces
+bind = $mainMod, S, submap, special
+submap = special
+
+bind = , D, togglespecialworkspace, discord
+bind = , D, submap, reset
+bind = $mainMod, D, togglespecialworkspace, discord
+bind = $mainMod, D, submap, reset
+
+bind = , A, togglespecialworkspace, spotify
+bind = , A, submap, reset
+bind = $mainMod, A, togglespecialworkspace, spotify
+bind = $mainMod, A, submap, reset
+
+bind = , F, togglespecialworkspace, scratchpad
+bind = , F, submap, reset
+bind = $mainMod, F, togglespecialworkspace, scratchpad
+bind = $mainMod, F, submap, reset
+
+bind = , X, togglespecialworkspace, clear
+bind = , X, togglespecialworkspace, clear
+bind = , X, submap, reset
+bind = $mainMod, X, togglespecialworkspace, clear
+bind = $mainMod, X, togglespecialworkspace, clear
+bind = $mainMod, X, submap, reset
+
+bind = $mainMod, S, submap, reset
+bind = , escape, submap, reset
+submap = reset
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
