--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,39 +2,37 @@
 HYPRLAND CONFIGURATION
 ########################################################################################
 
-exec-once = hyprpaper
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-# Auto Monitors
+# auto Monitors
 # monitor=,auto,auto,1
 
-# Desktop Monitors
+# desktop Monitors
 monitor=DP-1,highrr,0x0,1
 monitor=DP-2,highrr,2560x360,1
 
-# Important apps
+# important apps
+exec-once = hyprpaper
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
 exec-once = mako
 exec-once = waybar
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # Startup apps
 exec-once = spotify-launcher
-# exec-once = bash ~/.config/hypr/minimize.sh
-# exec-once = discord --start-minimized
 exec-once = discord
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
-# Variables
+# variables
 $terminal = alacritty
 $fileManager = thunar
 $menu = wofi
 $browser = firefox
 $sysmenu = wlogout
 
-# Rules
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+# rules
+windowrulev2 = nomaximizerequest, class:.* # only manual maximize (maximize != fullscreen)
 
 windowrule=float,pavucontrol
 windowrule=size 30% 30%,pavucontrol
@@ -48,15 +46,11 @@ windowrule=size 100% 100%,wlogout
 windowrule=stayfocused,wlogout
 windowrule=animation slide,wlogout
 
-# windowrule=float,Spotify
-# windowrule=center,Spotify
-# windowrule=minsize 60% 60%,Spotify
-
-# Special workspace apps
+# set some apps to special workspaces, bind access in special layer
 windowrule=workspace special:spotify silent,Spotify
 windowrule=workspace special:discord silent,discord
 
-# windowrule=stayfocused,steam # causes some issues
+# windowrule=stayfocused,steam # causes some issues, but fixes menus
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -93,7 +87,6 @@ general {
 
     layout = dwindle
 
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = true
 }
 
@@ -127,33 +120,20 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
-}
-
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    force_split = 2
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = off
 }
 
 misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-# device:epic-mouse-v1 {
-#     sensitivity = -0.5
-# }
-
-# Keybinds
+# keybind vars
 $mainMod = SUPER
 $print = page_up
 
@@ -177,31 +157,34 @@ bind = $mainMod, V, centerwindow
 bind = $mainMod, F, fullscreen, 0
 
 bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, O, togglesplit, # dwindle
 
-# Open apps
+# open apps
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod SHIFT, E, exec, $sysmenu
 
-# Move focus with mainMod + vim
+# move focus with mainMod + vim
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 
+# move windows
 bind = $mainMod SHIFT, h, movewindow, l
 bind = $mainMod SHIFT, l, movewindow, r
 bind = $mainMod SHIFT, k, movewindow, u
 bind = $mainMod SHIFT, j, movewindow, d
 
+# move monitors and workspaces
 bind = $mainMod CONTROL, l, focusmonitor, r
 bind = $mainMod CONTROL, h, focusmonitor, l
-# bind = $mainMod ALT, l, workspace, m+1
-# bind = $mainMod ALT, h, workspace, m-1
+# bind = $mainMod ALT, l, workspace, r+1
+# bind = $mainMod ALT, h, workspace, r-1
 
+# workspaces
 # bind = $mainMod, 1, workspace, 1
 # bind = $mainMod, 2, workspace, 2
 # bind = $mainMod, 3, workspace, 3
@@ -251,14 +234,19 @@ bind = $mainMod SHIFT, 8, split-movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, split-movetoworkspacesilent, 9
 bind = $mainMod SHIFT, 0, split-movetoworkspacesilent, 10
 
-bind = $mainMod ALT, l, split-workspace, m+1
-bind = $mainMod ALT, h, split-workspace, m-1
+bind = $mainMod ALT, l, split-workspace, r+1
+bind = $mainMod ALT, h, split-workspace, r-1
+# end
 
-# Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# scroll through existing workspaces with mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
 
-# Special app workspaces
+# move/resize windows with mainMod + LMB/RMB and dragging
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
+
+# special app workspaces
 bind = $mainMod, S, submap, special
 submap = special
 
@@ -284,19 +272,12 @@ bind = $mainMod, X, togglespecialworkspace, clear
 bind = $mainMod, X, togglespecialworkspace, clear
 bind = $mainMod, X, submap, reset
 
+bind = , S, submap, reset
 bind = $mainMod, S, submap, reset
 bind = , escape, submap, reset
 submap = reset
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Resize windows with keyboard controls
+# resize windows with keyboard controls
 bind = $mainMod, R, submap, resize
 submap=resize
 
