--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,295 +2,21 @@
 HYPRLAND CONFIGURATION
 ########################################################################################
 
-# auto Monitors
+# auto monitors (go with this)
 # monitor=,auto,auto,1
 
-# desktop Monitors
+# desktop monitors (custom)
 monitor=DP-1,highrr,0x0,1
 monitor=DP-2,highrr,2560x360,1
 
-# important apps
-exec-once = hyprpaper
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-exec-once = mako
-exec-once = waybar
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-
-# Startup apps
-exec-once = spotify-launcher
-exec-once = discord
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
-# variables
-$terminal = alacritty
-$fileManager = thunar
-$menu = wofi
-$browser = firefox
-$sysmenu = wlogout
-
-# rules
-windowrulev2 = nomaximizerequest, class:.* # only manual maximize (maximize != fullscreen)
-
-windowrule=float,pavucontrol
-windowrule=size 30% 30%,pavucontrol
-windowrule=move cursor -60% 40,pavucontrol
-
-windowrule=nomaximizerequest,wlogout
-windowrule=nofullscreenrequest,wlogout
-windowrule=float,wlogout
-windowrule=move 0% 0%,wlogout
-windowrule=size 100% 100%,wlogout
-windowrule=stayfocused,wlogout
-windowrule=animation slide,wlogout
-
-# set some apps to special workspaces, bind access in special layer
-windowrule=workspace special:spotify silent,Spotify
-windowrule=workspace special:discord silent,discord
-
-# windowrule=stayfocused,steam # causes some issues, but fixes menus
-
-# Some default env vars.
+# some default env variables
 env = XCURSOR_SIZE,24
 env = WLR_DRM_NO_ATOMIC,1 # tearing support
 
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options = caps:swapescape
-    kb_rules =
+# comment/uncomment if no plugins
+exec-once = hyprpm reload -n
 
-    repeat_delay = 250
-    repeat_rate = 40
-
-    numlock_by_default = true
-
-    follow_mouse = 1
-
-    accel_profile = flat
-    sensitivity = 0 # 0 means no modification.
-
-    touchpad { # TODO
-        natural_scroll = true
-    }
-}
-
-general {
-    gaps_in = 3
-    gaps_out = 5
-    border_size = 2
-    col.active_border = rgba(61afefee) rgba(c678ddee) 45deg
-    col.inactive_border = rgba(282c34aa)
-
-    layout = dwindle
-
-    allow_tearing = true
-}
-
-decoration {
-    rounding = 1
-    
-    blur {
-        enabled = true
-        size = 4
-        passes = 2
-    }
-
-    drop_shadow = true
-    shadow_range = 6
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-    dim_special = 0.5
-}
-
-animations {
-    enabled = yes
-
-    bezier = easeOut, 0.16, 1, 0.3, 1
-    # bezier = linear, 0.45, 0.45, 0.45, 0.45
-
-    animation = windows,1,2,easeOut,slide
-    animation = fade,1,2,easeOut
-    animation = border,1,2,easeOut
-    # animation = borderangle,1,60,linear,loop
-    animation = workspaces,1,2,easeOut,slide
-}
-
-dwindle {
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
-    force_split = 2
-}
-
-gestures {
-    workspace_swipe = off
-}
-
-misc {
-    force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
-}
-
-# keybind vars
-$mainMod = SUPER
-$print = page_up
-
-bind = $mainMod SHIFT, R, forcerendererreload
-
-# screenshot area
-bind = $mainMod, $print, exec, grimblast --freeze copysave area ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
-# screenshot area and open in swappy
-bind = $mainMod SHIFT, $print, exec, XDG_DESKTOP_DIR=~/screenshots grimblast --freeze save area - | swappy -f - -o ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s)-annotated.png
-# screenshot active window
-# bind = $mainMod CONTROL, $print, exec, hyprctl -j activewindow | jq -r '"\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
-# screenshot active monitor
-bind = $mainMod CONTROL, $print, exec, hyprctl -j monitors | jq -r '.[] | select(.focused==true) | "\(.x),\(.y) \(.width)x\(.height)"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
-
-bind = $mainMod, C, killactive, 
-# bind = $mainMod, M, exit, 
-bind = $mainMod, M, exec, hyprctl dispatch exit  # calling exit is buggy for some reason
-bind = $mainMod, V, togglefloating, 
-bind = $mainMod, V, resizeactive, exact 70% 70%
-bind = $mainMod, V, centerwindow
-bind = $mainMod, F, fullscreen, 0
-
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, O, togglesplit, # dwindle
-
-# open apps
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, D, exec, $menu
-bind = $mainMod, B, exec, $browser
-bind = $mainMod SHIFT, E, exec, $sysmenu
-
-# move focus with mainMod + vim
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-# move windows
-bind = $mainMod SHIFT, h, movewindow, l
-bind = $mainMod SHIFT, l, movewindow, r
-bind = $mainMod SHIFT, k, movewindow, u
-bind = $mainMod SHIFT, j, movewindow, d
-
-# move monitors and workspaces
-bind = $mainMod CONTROL, l, focusmonitor, r
-bind = $mainMod CONTROL, h, focusmonitor, l
-# bind = $mainMod ALT, l, workspace, r+1
-# bind = $mainMod ALT, h, workspace, r-1
-
-# workspaces
-# bind = $mainMod, 1, workspace, 1
-# bind = $mainMod, 2, workspace, 2
-# bind = $mainMod, 3, workspace, 3
-# bind = $mainMod, 4, workspace, 4
-# bind = $mainMod, 5, workspace, 5
-# bind = $mainMod, 6, workspace, 6
-# bind = $mainMod, 7, workspace, 7
-# bind = $mainMod, 8, workspace, 8
-# bind = $mainMod, 9, workspace, 9
-# bind = $mainMod, 0, workspace, 10
-# bind = $mainMod, n, workspace, empty
-#
-# bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-# bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-# bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-# bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-# bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-# bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-# bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-# bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-# bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-# bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
-
-# split-monitor-workspaces binds for double monitor setups
-# https://github.com/Duckonaut/split-monitor-workspaces
-# uncomment/comment
-bind = $mainMod, 1, split-workspace, 1
-bind = $mainMod, 2, split-workspace, 2
-bind = $mainMod, 3, split-workspace, 3
-bind = $mainMod, 4, split-workspace, 4
-bind = $mainMod, 5, split-workspace, 5
-bind = $mainMod, 6, split-workspace, 6
-bind = $mainMod, 7, split-workspace, 7
-bind = $mainMod, 8, split-workspace, 8
-bind = $mainMod, 9, split-workspace, 9
-bind = $mainMod, 0, split-workspace, 10
-bind = $mainMod, n, split-workspace, empty
-
-bind = $mainMod SHIFT, 1, split-movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, split-movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, split-movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, split-movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, split-movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, split-movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, split-movetoworkspacesilent, 7
-bind = $mainMod SHIFT, 8, split-movetoworkspacesilent, 8
-bind = $mainMod SHIFT, 9, split-movetoworkspacesilent, 9
-bind = $mainMod SHIFT, 0, split-movetoworkspacesilent, 10
-
-bind = $mainMod ALT, l, split-workspace, r+1
-bind = $mainMod ALT, h, split-workspace, r-1
-# end
-
-# scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# special app workspaces
-bind = $mainMod, S, submap, special
-submap = special
-
-bind = , D, togglespecialworkspace, discord
-bind = , D, submap, reset
-bind = $mainMod, D, togglespecialworkspace, discord
-bind = $mainMod, D, submap, reset
-
-bind = , A, togglespecialworkspace, spotify
-bind = , A, submap, reset
-bind = $mainMod, A, togglespecialworkspace, spotify
-bind = $mainMod, A, submap, reset
-
-bind = , F, togglespecialworkspace, scratchpad
-bind = , F, submap, reset
-bind = $mainMod, F, togglespecialworkspace, scratchpad
-bind = $mainMod, F, submap, reset
-
-bind = , X, togglespecialworkspace, clear
-bind = , X, togglespecialworkspace, clear
-bind = , X, submap, reset
-bind = $mainMod, X, togglespecialworkspace, clear
-bind = $mainMod, X, togglespecialworkspace, clear
-bind = $mainMod, X, submap, reset
-
-bind = , S, submap, reset
-bind = $mainMod, S, submap, reset
-bind = , escape, submap, reset
-submap = reset
-
-# resize windows with keyboard controls
-bind = $mainMod, R, submap, resize
-submap=resize
-
-binde =,l,resizeactive,10 0
-binde =,h,resizeactive,-10 0
-binde =,k,resizeactive,0 -10
-binde =,j,resizeactive,0 10
-binde =CONTROL,l,resizeactive,70 0
-binde =CONTROL,h,resizeactive,-70 0
-binde =CONTROL,k,resizeactive,0 -70
-binde =CONTROL,j,resizeactive,0 70
-
-bind=,escape,submap,reset 
-bind=$mainMod, R, submap, reset
-
-submap=reset
+# split configs
+source = ~/.config/hypr/apps.conf
+source = ~/.config/hypr/options.conf
+source = ~/.config/hypr/binds.conf
