close and groups binds

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -20,7 +20,7 @@ bind = $mainMod SHIFT, $print, exec, XDG_DESKTOP_DIR=~/screenshots grimblast --f
 # screenshot active monitor
 bind = $mainMod CONTROL, $print, exec, hyprctl -j monitors | jq -r '.[] | select(.focused==true) | "\(.x),\(.y) \(.width)x\(.height)"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
 
-bind = $mainMod, C, killactive, 
+bind = $mainMod SHIFT, Q, killactive, 
 # bind = $mainMod, M, exit, 
 bind = $mainMod, M, exec, hyprctl dispatch exit  # calling exit is buggy for some reason
 bind = $mainMod, V, togglefloating, 
@@ -30,6 +30,9 @@ bind = $mainMod, F, fullscreen, 0
 
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
+bind = $mainMod, T, togglegroup
+bind = $mainMod, tab, changegroupactive, f
+bind = $mainMod SHIFT, tab, changegroupactive, b
 
 # open apps
 bind = $mainMod, RETURN, exec, $terminal
@@ -137,12 +140,12 @@ bind = , F, submap, reset
 bind = $mainMod, F, togglespecialworkspace, scratchpad
 bind = $mainMod, F, submap, reset
 
-bind = , X, togglespecialworkspace, clear
-bind = , X, togglespecialworkspace, clear
-bind = , X, submap, reset
-bind = $mainMod, X, togglespecialworkspace, clear
-bind = $mainMod, X, togglespecialworkspace, clear
-bind = $mainMod, X, submap, reset
+bind = , C, togglespecialworkspace, clear
+bind = , C, togglespecialworkspace, clear
+bind = , C, submap, reset
+bind = $mainMod, C, togglespecialworkspace, clear
+bind = $mainMod, C, togglespecialworkspace, clear
+bind = $mainMod, C, submap, reset
 
 bind = , S, submap, reset
 bind = $mainMod, S, submap, reset
