--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -62,9 +62,21 @@ animations {
 }
 
 dwindle {
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    pseudotile = yes # master switch for pseudotiling
     preserve_split = yes # you probably want this
     force_split = 2
+}
+
+group {
+    col.border_active = rgba(61afefee) rgba(c678ddee) 45deg
+    col.border_inactive = rgba(282c34aa)
+    groupbar {
+		font_family = Hack Nerd Font
+		gradients = false
+		text_color = rgba(f6f7f9ff)
+		col.active = rgba(c678ddee)
+		col.inactive = rgba(282c34aa)
+    }	
 }
 
 gestures {
