--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,7 +3,7 @@ HYPRLAND CONFIGURATION
 ########################################################################################
 
 # auto monitors (go with this)
-# monitor=,auto,auto,1
+# monitor=,preferred,auto,1
 
 # desktop monitors (custom)
 monitor=DP-1,highrr,0x0,1
