--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -15,8 +15,12 @@ input {
     accel_profile = flat
     sensitivity = 0 # 0 means no modification.
 
-    touchpad { # TODO
+    touchpad {
         natural_scroll = true
+		tap_button_map = lrm
+		clickfinger_behavior = true
+		tap-to-click = true
+		scroll_factor = 0.5
     }
 }
 
@@ -80,9 +84,17 @@ group {
 }
 
 gestures {
-    workspace_swipe = off
+    workspace_swipe = true
 }
 
 misc {
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+	disable_hyprland_logo = 1
+	background_color = rgb(282c34)
+	mouse_move_enables_dpms = false #prevents accidental wake up
+	key_press_enables_dpms = true
+}
+
+device:syna32bf:00-06cb:ceb0-touchpad {
+    sensitivity = 0.7
 }
