disable intro animation

--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -54,6 +54,7 @@ decoration {
 
 animations {
     enabled = yes
+	first_launch_animation = false
 
     bezier = easeOut, 0.16, 1, 0.3, 1
     # bezier = linear, 0.45, 0.45, 0.45, 0.45
