--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -30,3 +30,10 @@ windowrule=workspace special:spotify silent,Spotify
 windowrule=workspace special:discord silent,discord
 
 # windowrule=stayfocused,steam # causes some issues, but fixes menus
+
+# xwaylandvideobridge
+windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$
