laptop dual screen settings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,6 +9,12 @@ HYPRLAND CONFIGURATION
 monitor=DP-1,highrr,0x0,1
 monitor=DP-2,highrr,2560x360,1
 
+# laptop monitor setups:
+# place on top
+# monitor=eDP-1,preffered,0x0,1
+# monitor=DP-1,preffered,0x-1080,1
+# monitor=DP-1,preffered,0x-1440,1
+
 # some default env variables
 env = XCURSOR_SIZE,24
 env = WLR_DRM_NO_ATOMIC,1 # tearing support
