toggle wlogout with super+escape

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -3,7 +3,6 @@ $terminal = alacritty
 $fileManager = thunar
 $menu = wofi
 $browser = firefox
-$sysmenu = wlogout
 
 # keybind variables
 $mainMod = SUPER
@@ -20,10 +19,10 @@ bind = $mainMod SHIFT, $print, exec, XDG_DESKTOP_DIR=~/screenshots grimblast --f
 # screenshot active monitor
 bind = $mainMod CONTROL, $print, exec, hyprctl -j monitors | jq -r '.[] | select(.focused==true) | "\(.x),\(.y) \(.width)x\(.height)"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
 
-bind = $mainMod SHIFT, Q, killactive, 
-# bind = $mainMod, M, exit, 
+bind = $mainMod SHIFT, Q, killactive,
+# bind = $mainMod, M, exit,
 bind = $mainMod, M, exec, hyprctl dispatch exit  # calling exit is buggy for some reason
-bind = $mainMod, V, togglefloating, 
+bind = $mainMod, V, togglefloating,
 bind = $mainMod, V, resizeactive, exact 70% 70%
 bind = $mainMod, V, centerwindow
 bind = $mainMod, F, fullscreen, 0
@@ -37,9 +36,10 @@ bind = $mainMod SHIFT, tab, changegroupactive, b
 # open apps
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
+bind = $mainMod SHIFT, E, execr, $terminal -e ranger
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, B, exec, $browser
-bind = $mainMod SHIFT, E, exec, $sysmenu
+bind = $mainMod, escape, exec, bash ~/.config/hypr/toggle_wlogout.sh
 
 # move focus with mainMod + vim
 bind = $mainMod, h, movefocus, l
