--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -22,7 +22,7 @@ windowrule=nofullscreenrequest,wlogout
 windowrule=float,wlogout
 windowrule=move 0% 0%,wlogout
 windowrule=size 100% 100%,wlogout
-windowrule=stayfocused,wlogout
+# windowrule=stayfocused,wlogout
 windowrule=animation slide,wlogout
 
 # set some apps to special workspaces, bind access in special layer
@@ -37,3 +37,5 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+
+# vim: expandtab=true sw=4 ts=4
