--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,3 +26,5 @@ exec-once = hyprpm reload -n
 source = ~/.config/hypr/apps.conf
 source = ~/.config/hypr/options.conf
 source = ~/.config/hypr/binds.conf
+
+# vim: expandtab=true sw=4 ts=4
