--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -64,6 +64,7 @@ animations {
     animation = border,1,2,easeOut
     # animation = borderangle,1,60,linear,loop
     animation = workspaces,1,2,easeOut,slide
+    animation = specialWorkspace,1,2,easeOut,slidevert
 }
 
 dwindle {
@@ -99,3 +100,5 @@ misc {
 device:syna32bf:00-06cb:ceb0-touchpad {
     sensitivity = 0.7
 }
+
+# vim: expandtab=true sw=4 ts=4
