ranger alias + fix modeline

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -36,7 +36,6 @@ bind = $mainMod SHIFT, tab, changegroupactive, b
 # open apps
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, E, execr, $terminal -e ranger
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, escape, exec, bash ~/.config/hypr/toggle_wlogout.sh
@@ -170,4 +169,4 @@ bind=$mainMod, R, submap, reset
 
 submap=reset
 
-# vim: expandtab=true sw=4 ts=4
+# vim: ft=conf expandtab sw=4 ts=4
