--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,4 +27,4 @@ source = ~/.config/hypr/apps.conf
 source = ~/.config/hypr/options.conf
 source = ~/.config/hypr/binds.conf
 
-# vim: expandtab=true sw=4 ts=4
+# vim: ft=conf expandtab sw=4 ts=4
