--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -38,4 +38,4 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
-# vim: expandtab=true sw=4 ts=4
+# vim: ft=conf expandtab sw=4 ts=4
