--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -101,4 +101,4 @@ device:syna32bf:00-06cb:ceb0-touchpad {
     sensitivity = 0.7
 }
 
-# vim: expandtab=true sw=4 ts=4
+# vim: ft=conf expandtab sw=4 ts=4
