network bar icons

--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -15,7 +15,11 @@ windowrulev2 = nomaximizerequest, class:.* # only manual maximize (maximize != f
 
 windowrule=float,pavucontrol
 windowrule=size 30% 30%,pavucontrol
-windowrule=move cursor -60% 40,pavucontrol
+windowrule=move onscreen cursor -60% 40,pavucontrol
+
+windowrule=float,nm-connection-editor
+windowrule=size 30% 30%,nm-connection-editor
+windowrule=move onscreen 100% 40,nm-connection-editor
 
 windowrule=nomaximizerequest,wlogout
 windowrule=nofullscreenrequest,wlogout
