quality of life

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -38,7 +38,7 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, escape, exec, bash ~/.config/hypr/toggle_wlogout.sh
+bind = $mainMod SHIFT, E, exec, bash ~/.config/hypr/toggle_wlogout.sh
 
 # move focus with mainMod + vim
 bind = $mainMod, h, movefocus, l
