--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,4 +27,6 @@ source = ~/.config/hypr/apps.conf
 source = ~/.config/hypr/options.conf
 source = ~/.config/hypr/binds.conf
 
+exec-once=sleep 1; hyprctl dispatch workspace 1
+
 # vim: ft=conf expandtab sw=4 ts=4
