--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -1,10 +1,13 @@
+# lid events - configure systemctl as well
+bindl=,switch:Lid Switch,exec,swaylock
+
 # app variables
 $terminal = alacritty
 $fileManager = thunar
 $menu = wofi
 $browser = firefox
 
-# keybind variables
+# key bind variables
 $mainMod = SUPER
 $print = page_up
 
