small ui adjustment

--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -32,6 +32,7 @@ windowrule=animation slide,wlogout
 # set some apps to special workspaces, bind access in special layer
 windowrule=workspace special:spotify silent,Spotify
 windowrule=workspace special:discord silent,discord
+windowrule=workspace special:discord silent,Discord
 
 # windowrule=stayfocused,steam # causes some issues, but fixes menus
 
