machine specific hyprland configs

--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -7,8 +7,8 @@ exec-once = waybar
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 # startup apps
-exec-once = spotify-launcher
-exec-once = discord
+exec-once = spotify-launcher # ==set d
+exec-once = discord # ==set d
 
 # rules
 windowrulev2 = nomaximizerequest, class:.* # only manual maximize (maximize != fullscreen)
