--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -9,7 +9,8 @@ $browser = firefox
 
 # key bind variables
 $mainMod = SUPER
-$print = page_up
+$print = page_up # ==set d
+$print = backspace # ==set l
 
 bind = $mainMod SHIFT, R, forcerendererreload
 
@@ -56,10 +57,13 @@ bind = $mainMod SHIFT, j, movewindow, d
 # move monitors and workspaces
 bind = $mainMod CONTROL, l, focusmonitor, r
 bind = $mainMod CONTROL, h, focusmonitor, l
+# <<set l
 # bind = $mainMod ALT, l, workspace, r+1
 # bind = $mainMod ALT, h, workspace, r-1
+# >>set
 
 # workspaces
+# <<set l
 # bind = $mainMod, 1, workspace, 1
 # bind = $mainMod, 2, workspace, 2
 # bind = $mainMod, 3, workspace, 3
@@ -82,10 +86,11 @@ bind = $mainMod CONTROL, h, focusmonitor, l
 # bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 # bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 # bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+# >>set
 
 # split-monitor-workspaces binds for double monitor setups
 # https://github.com/Duckonaut/split-monitor-workspaces
-# uncomment/comment
+# <<set d
 bind = $mainMod, 1, split-workspace, 1
 bind = $mainMod, 2, split-workspace, 2
 bind = $mainMod, 3, split-workspace, 3
@@ -111,7 +116,7 @@ bind = $mainMod SHIFT, 0, split-movetoworkspacesilent, 10
 
 bind = $mainMod ALT, l, split-workspace, r+1
 bind = $mainMod ALT, h, split-workspace, r-1
-# end
+# >>set
 
 # scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -165,7 +170,7 @@ binde =CONTROL,h,resizeactive,-70 0
 binde =CONTROL,k,resizeactive,0 -70
 binde =CONTROL,j,resizeactive,0 70
 
-bind=,escape,submap,reset 
+bind=,escape,submap,reset
 bind=$mainMod, R, submap, reset
 
 submap=reset
