--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,11 +3,13 @@ HYPRLAND CONFIGURATION
 ########################################################################################
 
 # auto monitors (go with this)
-# monitor=,preferred,auto,1
+# monitor=,preferred,auto,1 # ==set l
 
 # desktop monitors (custom)
+# <<set d
 monitor=DP-1,highrr,0x0,1
 monitor=DP-2,highrr,2560x360,1
+# >>set
 
 # laptop monitor setups:
 # place on top
@@ -27,6 +29,6 @@ source = ~/.config/hypr/apps.conf
 source = ~/.config/hypr/options.conf
 source = ~/.config/hypr/binds.conf
 
-exec-once=sleep 1; hyprctl dispatch workspace 1
+exec-once=sleep 1; hyprctl dispatch workspace 1 # ==set d
 
 # vim: ft=conf expandtab sw=4 ts=4
