script actually changes configs

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -10,7 +10,7 @@ $browser = firefox
 # key bind variables
 $mainMod = SUPER
 $print = page_up # ==set d
-$print = backspace # ==set l
+# $print = backspace # ==set l
 
 bind = $mainMod SHIFT, R, forcerendererreload
 
@@ -75,7 +75,6 @@ bind = $mainMod CONTROL, h, focusmonitor, l
 # bind = $mainMod, 9, workspace, 9
 # bind = $mainMod, 0, workspace, 10
 # bind = $mainMod, n, workspace, empty
-#
 # bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
 # bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
 # bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
