formatting and add move to special binds

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -129,30 +129,45 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod, S, submap, special
 submap = special
 
-bind = , D, togglespecialworkspace, discord
-bind = , D, submap, reset
-bind = $mainMod, D, togglespecialworkspace, discord
-bind = $mainMod, D, submap, reset
+    bind = , D, togglespecialworkspace, discord
+    bind = , D, submap, reset
+    bind = $mainMod, D, togglespecialworkspace, discord
+    bind = $mainMod, D, submap, reset
 
-bind = , A, togglespecialworkspace, spotify
-bind = , A, submap, reset
-bind = $mainMod, A, togglespecialworkspace, spotify
-bind = $mainMod, A, submap, reset
+    bind = , A, togglespecialworkspace, spotify
+    bind = , A, submap, reset
+    bind = $mainMod, A, togglespecialworkspace, spotify
+    bind = $mainMod, A, submap, reset
 
-bind = , F, togglespecialworkspace, scratchpad
-bind = , F, submap, reset
-bind = $mainMod, F, togglespecialworkspace, scratchpad
-bind = $mainMod, F, submap, reset
+    bind = , F, togglespecialworkspace, scratchpad
+    bind = , F, submap, reset
+    bind = $mainMod, F, togglespecialworkspace, scratchpad
+    bind = $mainMod, F, submap, reset
 
-bind = , C, togglespecialworkspace, clear
-bind = , C, togglespecialworkspace, clear
-bind = , C, submap, reset
-bind = $mainMod, C, togglespecialworkspace, clear
-bind = $mainMod, C, togglespecialworkspace, clear
-bind = $mainMod, C, submap, reset
+    bind = , C, togglespecialworkspace, clear
+    bind = , C, togglespecialworkspace, clear
+    bind = , C, submap, reset
+    bind = $mainMod, C, togglespecialworkspace, clear
+    bind = $mainMod, C, togglespecialworkspace, clear
+    bind = $mainMod, C, submap, reset
 
 bind = , S, submap, reset
 bind = $mainMod, S, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
+bind = $mainMod SHIFT, S, submap, send_special
+submap = send_special
+
+    bind = , D, movetoworkspacesilent, special:discord
+    bind = , D, submap, reset
+    bind = , A, movetoworkspacesilent, special:spotify
+    bind = , A, submap, reset
+    bind = , F, movetoworkspacesilent, special:scratchpad
+    bind = , F, submap, reset
+
+bind = , S, submap, reset
+bind = $mainMod SHIFT, S, submap, reset
 bind = , escape, submap, reset
 submap = reset
 
@@ -160,18 +175,17 @@ submap = reset
 bind = $mainMod, R, submap, resize
 submap=resize
 
-binde =,l,resizeactive,10 0
-binde =,h,resizeactive,-10 0
-binde =,k,resizeactive,0 -10
-binde =,j,resizeactive,0 10
-binde =CONTROL,l,resizeactive,70 0
-binde =CONTROL,h,resizeactive,-70 0
-binde =CONTROL,k,resizeactive,0 -70
-binde =CONTROL,j,resizeactive,0 70
+    binde =,l,resizeactive,10 0
+    binde =,h,resizeactive,-10 0
+    binde =,k,resizeactive,0 -10
+    binde =,j,resizeactive,0 10
+    binde =CONTROL,l,resizeactive,70 0
+    binde =CONTROL,h,resizeactive,-70 0
+    binde =CONTROL,k,resizeactive,0 -70
+    binde =CONTROL,j,resizeactive,0 70
 
 bind=,escape,submap,reset
 bind=$mainMod, R, submap, reset
-
 submap=reset
 
 # vim: ft=conf expandtab sw=4 ts=4
