--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-########################################################################################
+u#######################################################################################
 HYPRLAND CONFIGURATION
 ########################################################################################
 
@@ -12,6 +12,8 @@ monitor=DP-2,highrr,2560x360,1
 # >>set
 
 # laptop monitor setups:
+# rotate left
+# monitor=eDP-1,preffered,0x0,1,transform,1
 # place on top
 # monitor=eDP-1,preffered,0x0,1
 # monitor=DP-1,preffered,0x-1080,1
