--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -54,6 +54,11 @@ bind = $mainMod SHIFT, l, movewindow, r
 bind = $mainMod SHIFT, k, movewindow, u
 bind = $mainMod SHIFT, j, movewindow, d
 
+bind = $mainMod SHIFT CONTROL, h, movewindoworgroup, l
+bind = $mainMod SHIFT CONTROL, l, movewindoworgroup, r
+bind = $mainMod SHIFT CONTROL, k, movewindoworgroup, u
+bind = $mainMod SHIFT CONTROL, j, movewindoworgroup, d
+
 # move monitors and workspaces
 bind = $mainMod CONTROL, l, focusmonitor, r
 bind = $mainMod CONTROL, h, focusmonitor, l
