move to monitor vertically

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -60,8 +60,10 @@ bind = $mainMod SHIFT CONTROL, k, movewindoworgroup, u
 bind = $mainMod SHIFT CONTROL, j, movewindoworgroup, d
 
 # move monitors and workspaces
-bind = $mainMod CONTROL, l, focusmonitor, r
 bind = $mainMod CONTROL, h, focusmonitor, l
+bind = $mainMod CONTROL, l, focusmonitor, r
+bind = $mainMod CONTROL, k, focusmonitor, u
+bind = $mainMod CONTROL, j, focusmonitor, d
 # <<set l
 # bind = $mainMod ALT, l, workspace, r+1
 # bind = $mainMod ALT, h, workspace, r-1
