--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -40,7 +40,10 @@ bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, B, exec, $browser
-bind = $mainMod SHIFT, E, exec, bash ~/.config/hypr/toggle_wlogout.sh
+
+# toggle utilities
+bind = $mainMod SHIFT, E, exec, ~/.config/hypr/bin/toggle_wlogout.sh
+bind = $mainMod SHIFT, A, exec, ~/.config/hypr/bin/toggle_animation.sh
 
 # move focus with mainMod + vim
 bind = $mainMod, h, movefocus, l
