waybar: fix special detection and add toggle

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -44,6 +44,7 @@ bind = $mainMod, B, exec, $browser
 # toggle utilities
 bind = $mainMod SHIFT, E, exec, ~/.config/hypr/bin/toggle_wlogout.sh
 bind = $mainMod SHIFT, A, exec, ~/.config/hypr/bin/toggle_animation.sh
+bind = $mainMod SHIFT, W, exec, pkill -SIGUSR1 waybar # toggle waybar visibility
 
 # move focus with mainMod + vim
 bind = $mainMod, h, movefocus, l
