--- a/waybar/config
+++ b/waybar/config
@@ -25,7 +25,7 @@
     }
   },
   "custom/special": {
-    "exec": "~/.config/waybar/special.sh"
+    "exec": "~/.config/waybar/bin/module_special.sh"
   },
   "hyprland/window": {
     "separate-outputs": true,
@@ -52,7 +52,7 @@
   "pulseaudio": {
     "format": "<span color='#ABB2BF'>🔊</span> {volume}%",
     "format-muted": "<span color='#ABB2BF'>🔇</span><span color='#323842'> {volume}%</span>",
-    "on-click": "~/.config/waybar/toggle_pavu.sh",
+    "on-click": "~/.config/waybar/bin/toggle_pavu.sh",
     "on-click-right": "pamixer -t"
   },
   "battery": {
@@ -97,6 +97,6 @@
     "tooltip-format": "{ifname} {ipaddr}",
     "tooltip-format-wifi": "{ifname} {frequency} ({signalStrength}%)",
     "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
-    "on-click": "~/.config/waybar/toggle_network.sh"
+    "on-click": "~/.config/waybar/bin/toggle_network.sh"
   }
 }
