toggle window decorations and pseudo fullscreen

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -45,6 +45,12 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod SHIFT, E, exec, ~/.config/hypr/bin/toggle_wlogout.sh
 bind = $mainMod SHIFT, A, exec, ~/.config/hypr/bin/toggle_animation.sh
 bind = $mainMod SHIFT, W, exec, pkill -SIGUSR1 waybar # toggle waybar visibility
+bind = $mainMod SHIFT, G, exec, ~/.config/hypr/bin/toggle_gaps.sh
+bind = $mainMod SHIFT, B, exec, ~/.config/hypr/bin/toggle_border.sh
+# pseudo full screen
+    bind = $mainMod SHIFT, F, exec, pkill -SIGUSR1 waybar
+    bind = $mainMod SHIFT, F, exec, ~/.config/hypr/bin/toggle_gaps.sh
+    bind = $mainMod SHIFT, F, exec, ~/.config/hypr/bin/toggle_border.sh
 
 # move focus with mainMod + vim
 bind = $mainMod, h, movefocus, l
