clear special workspaces when changing focussed work space

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -134,6 +134,28 @@ bind = $mainMod ALT, l, split-workspace, r+1
 bind = $mainMod ALT, h, split-workspace, r-1
 # >>set
 
+# clear special workspaces when changing focus to another workspace
+bind = $mainMod, 1, togglespecialworkspace, clear
+bind = $mainMod, 1, togglespecialworkspace, clear
+bind = $mainMod, 2, togglespecialworkspace, clear
+bind = $mainMod, 2, togglespecialworkspace, clear
+bind = $mainMod, 3, togglespecialworkspace, clear
+bind = $mainMod, 3, togglespecialworkspace, clear
+bind = $mainMod, 4, togglespecialworkspace, clear
+bind = $mainMod, 4, togglespecialworkspace, clear
+bind = $mainMod, 5, togglespecialworkspace, clear
+bind = $mainMod, 5, togglespecialworkspace, clear
+bind = $mainMod, 6, togglespecialworkspace, clear
+bind = $mainMod, 6, togglespecialworkspace, clear
+bind = $mainMod, 7, togglespecialworkspace, clear
+bind = $mainMod, 7, togglespecialworkspace, clear
+bind = $mainMod, 8, togglespecialworkspace, clear
+bind = $mainMod, 8, togglespecialworkspace, clear
+bind = $mainMod, 9, togglespecialworkspace, clear
+bind = $mainMod, 9, togglespecialworkspace, clear
+bind = $mainMod, 0, togglespecialworkspace, clear
+bind = $mainMod, 0, togglespecialworkspace, clear
+
 # scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
