close special workspace when switching workspaces

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -135,26 +135,16 @@ bind = $mainMod ALT, h, split-workspace, r-1
 # >>set
 
 # clear special workspaces when changing focus to another workspace
-bind = $mainMod, 1, togglespecialworkspace, clear
-bind = $mainMod, 1, togglespecialworkspace, clear
-bind = $mainMod, 2, togglespecialworkspace, clear
-bind = $mainMod, 2, togglespecialworkspace, clear
-bind = $mainMod, 3, togglespecialworkspace, clear
-bind = $mainMod, 3, togglespecialworkspace, clear
-bind = $mainMod, 4, togglespecialworkspace, clear
-bind = $mainMod, 4, togglespecialworkspace, clear
-bind = $mainMod, 5, togglespecialworkspace, clear
-bind = $mainMod, 5, togglespecialworkspace, clear
-bind = $mainMod, 6, togglespecialworkspace, clear
-bind = $mainMod, 6, togglespecialworkspace, clear
-bind = $mainMod, 7, togglespecialworkspace, clear
-bind = $mainMod, 7, togglespecialworkspace, clear
-bind = $mainMod, 8, togglespecialworkspace, clear
-bind = $mainMod, 8, togglespecialworkspace, clear
-bind = $mainMod, 9, togglespecialworkspace, clear
-bind = $mainMod, 9, togglespecialworkspace, clear
-bind = $mainMod, 0, togglespecialworkspace, clear
-bind = $mainMod, 0, togglespecialworkspace, clear
+bind = $mainMod, 1, exec, ~/.config/hypr/bin/close_special.sh
+bind = $mainMod, 2, exec, ~/.config/hypr/bin/close_special.sh
+bind = $mainMod, 3, exec, ~/.config/hypr/bin/close_special.sh
+bind = $mainMod, 4, exec, ~/.config/hypr/bin/close_special.sh
+bind = $mainMod, 5, exec, ~/.config/hypr/bin/close_special.sh
+bind = $mainMod, 6, exec, ~/.config/hypr/bin/close_special.sh
+bind = $mainMod, 7, exec, ~/.config/hypr/bin/close_special.sh
+bind = $mainMod, 8, exec, ~/.config/hypr/bin/close_special.sh
+bind = $mainMod, 9, exec, ~/.config/hypr/bin/close_special.sh
+bind = $mainMod, 0, exec, ~/.config/hypr/bin/close_special.sh
 
 # scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
