add image support to ranger + alacritty

--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -43,4 +43,8 @@ windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 
+# ueberzugpp
+windowrulev2 = noanim,class:^(ueberzugpp)(.*)$
+windowrulev2 = noborder,class:^(ueberzugpp)(.*)$
+
 # vim: ft=conf expandtab sw=4 ts=4
