switch to fuzzel as app launcher

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -1,10 +1,10 @@
 # lid events - configure systemctl as well
-bindl=,switch:Lid Switch,exec,swaylock
+# bindl=,switch:Lid Switch,exec,swaylock
 
 # app variables
 $terminal = alacritty
 $fileManager = thunar
-$menu = wofi
+$menu = fuzzel
 $browser = firefox
 
 # key bind variables
