change launcher bind to toggle script

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -4,7 +4,7 @@
 # app variables
 $terminal = alacritty
 $fileManager = thunar
-$menu = fuzzel
+$menu = ~/.config/hypr/bin/toggle_fuzzle.sh
 $browser = firefox
 
 # key bind variables
