--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -51,6 +51,8 @@ bind = $mainMod SHIFT, B, exec, ~/.config/hypr/bin/toggle_border.sh
     bind = $mainMod SHIFT, F, exec, pkill -SIGUSR1 waybar
     bind = $mainMod SHIFT, F, exec, ~/.config/hypr/bin/toggle_gaps.sh
     bind = $mainMod SHIFT, F, exec, ~/.config/hypr/bin/toggle_border.sh
+bind = $mainMod SHIFT, Z, exec, ~/.config/hypr/bin/toggle_zoom.sh
+bind = $mainMod, Z, exec, ~/.config/hypr/bin/cycle_zoom.sh
 
 # move focus with mainMod + vim
 bind = $mainMod, h, movefocus, l
