switch kitty terminal and fish shell

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -2,7 +2,7 @@
 # bindl=,switch:Lid Switch,exec,swaylock
 
 # app variables
-$terminal = alacritty
+$terminal = kitty
 $fileManager = thunar
 $menu = ~/.config/hypr/bin/toggle_fuzzle.sh
 $browser = firefox
