--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -38,6 +38,7 @@ color13  #ddaeeb
 color14  #7fc8d1
 color15  #ffffff
 
-map super+shift+enter launch --cwd=current --type=os-window # open new terminal in current working directory
+# open new terminal in current working directory
+map super+shift+enter launch --cwd=current --type=os-window
 map ctrl+shift+u scroll_page_up
 map ctrl+shift+d scroll_page_down
