incognito fish and small bug fixes

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -37,6 +37,7 @@ bind = $mainMod SHIFT, tab, changegroupactive, b
 
 # open apps
 bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod CONTROL, RETURN, exec, $terminal -e fish --private
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, B, exec, $browser
